Extract remaining test logic to UnitTests